--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "userapi",
+  "name": "testapi",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,9 +10,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
-    "native-base": "^3.3.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
